--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,9 +21,9 @@ jobs:
         ca-certificates \
         curl \
         gnupg-agent \
-        software-properties-common && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - && 
+        software-properties-common && sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - && 
         add-apt-repository \
          "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
          $(lsb_release -cs) \
-         stable" && apt-get update && apt-get install docker-ce docker-ce-cli containerd.io && docker ps -a
+         stable" && sudo apt-get update && sudo apt-get install docker-ce docker-ce-cli containerd.io && sudo docker ps -a
 
