--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Test with pytest
       run: |
-        sudo apt-get update && apt-get install \
+        sudo apt-get update && sudo apt-get install \
         apt-transport-https \
         ca-certificates \
         curl \
