--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,14 +16,19 @@ jobs:
     - uses: actions/checkout@v2
     - name: Test with pytest
       run: |
-        sudo apt-get update && sudo apt-get install \
+        sudo apt-get update
+        sudo apt-get install \
         apt-transport-https \
         ca-certificates \
         curl \
         gnupg-agent \
-        software-properties-common && sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - && 
+        software-properties-common
+        sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
         sudo add-apt-repository \
          "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
          $(lsb_release -cs) \
-         stable" && sudo apt-get update && sudo apt-get install docker-ce docker-ce-cli containerd.io && sudo docker ps -a
+         stable"
+         sudo apt-get update
+         sudo apt-get install docker-ce docker-ce-cli containerd.io
+         sudo docker ps -a
 
